Created dialog for meal edit.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -1,5 +1,5 @@
 #Common
-cz.afrosoft.whattoeat.title=Co k \u017er\u00e1dlu
+cz.afrosoft.whattoeat.title=Co k \u017Er\u00E1dlu
 cz.afrosoft.whattoeat.value.empty=
 #Common end
 
@@ -18,50 +18,50 @@ cz.afrosoft.whattoeat.recipes.actions.add=P
 cz.afrosoft.whattoeat.recipes.actions.edit=E
 cz.afrosoft.whattoeat.recipes.actions.delete=S
 
-cz.afrosoft.whattoeat.recipes.table.header.ingredientKey=Jm\u00e9no
+cz.afrosoft.whattoeat.recipes.table.header.ingredientKey=Jm\u00E9no
 cz.afrosoft.whattoeat.recipes.table.header.recipeType=Typ
 cz.afrosoft.whattoeat.recipes.table.header.taste=Chu\u0165
-cz.afrosoft.whattoeat.recipes.table.header.preparationTime=\u010cas
-cz.afrosoft.whattoeat.recipes.table.header.rating=Hodnocen\u00ed
-cz.afrosoft.whattoeat.recipes.table.header.keywords=Kl\u00ed\u010dov\u00e1 slova
+cz.afrosoft.whattoeat.recipes.table.header.preparationTime=\u010Cas
+cz.afrosoft.whattoeat.recipes.table.header.rating=Hodnocen\u00ED
+cz.afrosoft.whattoeat.recipes.table.header.keywords=Kl\u00ED\u010Dov\u00E1 slova
 
 cz.afrosoft.whattoeat.recipes.view.properties.title=Vlastnosti
-cz.afrosoft.whattoeat.recipes.view.preparation.title=P\u0159\u00edprava
+cz.afrosoft.whattoeat.recipes.view.preparation.title=P\u0159\u00EDprava
 cz.afrosoft.whattoeat.recipes.view.ingredients.title=Ingredience
-cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Porc\u00ed:
+cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Porc\u00ED:
 cz.afrosoft.whattoeat.recipes.view.ingredients.price=Cena:
 
-cz.afrosoft.whattoeat.recipes.add.name=Jm\u00e9no:
+cz.afrosoft.whattoeat.recipes.add.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.recipes.add.type=Typ:
 cz.afrosoft.whattoeat.recipes.add.taste=Chu\u0165:
-cz.afrosoft.whattoeat.recipes.add.time=\u010cas:
-cz.afrosoft.whattoeat.recipes.add.rating=Hodnocen\u00ed:
-cz.afrosoft.whattoeat.recipes.add.keywords=Kl\u00ed\u010dov\u00e1 slova:
+cz.afrosoft.whattoeat.recipes.add.time=\u010Cas:
+cz.afrosoft.whattoeat.recipes.add.rating=Hodnocen\u00ED:
+cz.afrosoft.whattoeat.recipes.add.keywords=Kl\u00ED\u010Dov\u00E1 slova:
 cz.afrosoft.whattoeat.recipes.add.ingredients=Ingredience
-cz.afrosoft.whattoeat.recipes.add.ingredients.name=Jm\u00e9no:
-cz.afrosoft.whattoeat.recipes.add.ingredients.quantity=Mno\u017estv\u00ed:
-cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00edprava
-cz.afrosoft.whattoeat.recipes.add.sideDishes=P\u0159\u00edlohy
-cz.afrosoft.whattoeat.recipes.add.sideDishes.name=Jm\u00e9no:
+cz.afrosoft.whattoeat.recipes.add.ingredients.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.recipes.add.ingredients.quantity=Mno\u017Estv\u00ED:
+cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00EDprava
+cz.afrosoft.whattoeat.recipes.add.sideDishes=P\u0159\u00EDlohy
+cz.afrosoft.whattoeat.recipes.add.sideDishes.name=Jm\u00E9no:
 
-cz.afrosoft.whattoeat.dialog.delete.recipe.title=Smazání receptu
+cz.afrosoft.whattoeat.dialog.delete.recipe.title=Smaz\u00E1n\u00ED receptu
 cz.afrosoft.whattoeat.dialog.delete.recipe.messages=Opravdu chcete smazat tento recept?
 
 ## Validations
-cz.afrosoft.whattoeat.recipes.error.null=Recept nem\u016f\u017ee b\u00fdt null.
-cz.afrosoft.whattoeat.recipes.error.name.required=Jm\u00e9no mus\u00ed b\u00fdt vypln\u011bno.
-cz.afrosoft.whattoeat.recipes.error.type.required=Typ receptu mus\u00ed b\u00fdt vypln\u011bn.
-cz.afrosoft.whattoeat.recipes.error.taste.required=Chu\u0165 receptu mus\u00ed b\u00fdt vypln\u011bna.
-cz.afrosoft.whattoeat.recipes.error.time.required=\u010cas p\u0159\u00edpravy mus\u00ed b\u00fdt vypln\u011bn.
-cz.afrosoft.whattoeat.recipes.error.preparation=P\u0159\u00edprava mus\u00ed b\u00fdt vypln\u011bna.
-cz.afrosoft.whattoeat.recipes.error.ingeients=Recept mus\u00ed obsahovat alespo\u0148 jednu ingredienci.
+cz.afrosoft.whattoeat.recipes.error.null=Recept nem\u016F\u017Ee b\u00FDt null.
+cz.afrosoft.whattoeat.recipes.error.name.required=Jm\u00E9no mus\u00ED b\u00FDt vypln\u011Bno.
+cz.afrosoft.whattoeat.recipes.error.type.required=Typ receptu mus\u00ED b\u00FDt vypln\u011Bn.
+cz.afrosoft.whattoeat.recipes.error.taste.required=Chu\u0165 receptu mus\u00ED b\u00FDt vypln\u011Bna.
+cz.afrosoft.whattoeat.recipes.error.time.required=\u010Cas p\u0159\u00EDpravy mus\u00ED b\u00FDt vypln\u011Bn.
+cz.afrosoft.whattoeat.recipes.error.preparation=P\u0159\u00EDprava mus\u00ED b\u00FDt vypln\u011Bna.
+cz.afrosoft.whattoeat.recipes.error.ingeients=Recept mus\u00ED obsahovat alespo\u0148 jednu ingredienci.
 
 #Recipes end
 
 #RecipeIngredient specific piece conversion recipeIngredient names
-cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.name=\u010desnek
-cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.clove=strou\u017eek
-cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.bulb=pali\u010dka
+cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.name=\u010Desnek
+cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.clove=strou\u017Eek
+cz.afrosoft.whattoeat.recipeIngredient.piece.conversion.garlic.bulb=pali\u010Dka
 #RecipeIngredient specific piece conversion recipeIngredient names end
 
 #Ingredients
@@ -70,60 +70,60 @@ cz.afrosoft.whattoeat.ingredients.actions.add=P
 cz.afrosoft.whattoeat.ingredients.actions.edit=E
 cz.afrosoft.whattoeat.ingredients.actions.delete=S
 
-cz.afrosoft.whattoeat.ingredients.table.header.name=Jm\u00e9no
+cz.afrosoft.whattoeat.ingredients.table.header.name=Jm\u00E9no
 cz.afrosoft.whattoeat.ingredients.table.header.unit=Jednotka
 cz.afrosoft.whattoeat.ingredients.table.header.conversion=g/ks
 cz.afrosoft.whattoeat.ingredients.table.header.price=Cena
-cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ed\u010dov\u00e1 slova
+cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ED\u010Dov\u00E1 slova
 
-cz.afrosoft.whattoeat.ingredients.dialog.name=Jm\u00e9no:
+cz.afrosoft.whattoeat.ingredients.dialog.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.ingredients.dialog.unit=Jednotka:
 cz.afrosoft.whattoeat.ingredients.dialog.price=Cena za jednotku:
-cz.afrosoft.whattoeat.ingredients.dialog.conversion=Pr\u016fm\u011brn\u00fd po\u010det jednotek na kus:
-cz.afrosoft.whattoeat.ingredients.dialog.keywords=Kl\u00ed\u010dov\u00e1 slova:
+cz.afrosoft.whattoeat.ingredients.dialog.conversion=Pr\u016Fm\u011Brn\u00FD po\u010Det jednotek na kus:
+cz.afrosoft.whattoeat.ingredients.dialog.keywords=Kl\u00ED\u010Dov\u00E1 slova:
 
-cz.afrosoft.whattoeat.dialog.delete.ingredient.title=Smazání ingredience
+cz.afrosoft.whattoeat.dialog.delete.ingredient.title=Smaz\u00E1n\u00ED ingredience
 cz.afrosoft.whattoeat.dialog.delete.ingredient.messages=Opravdu chcete smazat tuto ingredienci?
 
 #Ingredients end
 
 #Diet generator
-cz.afrosoft.whattoeat.diet.generator.input.ingredientKey=Jm\u00e9no:
+cz.afrosoft.whattoeat.diet.generator.input.ingredientKey=Jm\u00E9no:
 cz.afrosoft.whattoeat.diet.generator.input.from=Od:
 cz.afrosoft.whattoeat.diet.generator.input.to=Do:
-cz.afrosoft.whattoeat.diet.generator.input.generator=Gener\u00e1tor:
+cz.afrosoft.whattoeat.diet.generator.input.generator=Gener\u00E1tor:
 cz.afrosoft.whattoeat.diet.generator.input.dishes=Chody:
-cz.afrosoft.whattoeat.diet.generator.input.breakfast=Sn\u00eddan\u011b:
-cz.afrosoft.whattoeat.diet.generator.input.morningSnack=Dopoledn\u00ed sva\u010dina:
-cz.afrosoft.whattoeat.diet.generator.input.afternoonSnack=Odpoledn\u00ed sva\u010dina:
-cz.afrosoft.whattoeat.diet.generator.input.soup=Pol\u00e9vka:
-cz.afrosoft.whattoeat.diet.generator.input.lunch=Ob\u011bd:
-cz.afrosoft.whattoeat.diet.generator.input.sideDish=P\u0159\u00edloha:
-cz.afrosoft.whattoeat.diet.generator.input.dinner=Ve\u010de\u0159e:
+cz.afrosoft.whattoeat.diet.generator.input.breakfast=Sn\u00EDdan\u011B:
+cz.afrosoft.whattoeat.diet.generator.input.morningSnack=Dopoledn\u00ED sva\u010Dina:
+cz.afrosoft.whattoeat.diet.generator.input.afternoonSnack=Odpoledn\u00ED sva\u010Dina:
+cz.afrosoft.whattoeat.diet.generator.input.soup=Pol\u00E9vka:
+cz.afrosoft.whattoeat.diet.generator.input.lunch=Ob\u011Bd:
+cz.afrosoft.whattoeat.diet.generator.input.sideDish=P\u0159\u00EDloha:
+cz.afrosoft.whattoeat.diet.generator.input.dinner=Ve\u010De\u0159e:
 cz.afrosoft.whattoeat.diet.generator.input.generate=Generovat
 
-cz.afrosoft.whattoeat.diet.generator.dialog.generated.header=J\u00eddeln\u00ed\u010dek vygenerov\u00e1n
+cz.afrosoft.whattoeat.diet.generator.dialog.generated.header=J\u00EDdeln\u00ED\u010Dek vygenerov\u00E1n
 
 #Diet generator end
 
 #Data model
-cz.afrosoft.whattoeat.recipeType.breakfast=Sn\u00eddan\u011b
-cz.afrosoft.whattoeat.recipeType.snack=Sva\u010dina
-cz.afrosoft.whattoeat.recipeType.lunch=Ob\u011bd
-cz.afrosoft.whattoeat.recipeType.soup=Pol\u00e9vka
-cz.afrosoft.whattoeat.recipeType.dinner=Ve\u010de\u0159e
-cz.afrosoft.whattoeat.recipeType.sideDish=P\u0159\u00edloha
+cz.afrosoft.whattoeat.recipeType.breakfast=Sn\u00EDdan\u011B
+cz.afrosoft.whattoeat.recipeType.snack=Sva\u010Dina
+cz.afrosoft.whattoeat.recipeType.lunch=Ob\u011Bd
+cz.afrosoft.whattoeat.recipeType.soup=Pol\u00E9vka
+cz.afrosoft.whattoeat.recipeType.dinner=Ve\u010De\u0159e
+cz.afrosoft.whattoeat.recipeType.sideDish=P\u0159\u00EDloha
 cz.afrosoft.whattoeat.recipeType.dessert=Dezert
 
-cz.afrosoft.whattoeat.taste.sweet=Sladk\u00e9
-cz.afrosoft.whattoeat.taste.salty=Slan\u00e9
-cz.afrosoft.whattoeat.taste.neutral=Neutr\u00e1ln\u00ed
+cz.afrosoft.whattoeat.taste.sweet=Sladk\u00E9
+cz.afrosoft.whattoeat.taste.salty=Slan\u00E9
+cz.afrosoft.whattoeat.taste.neutral=Neutr\u00E1ln\u00ED
 
-cz.afrosoft.whattoeat.preparationTime.instant=Okam\u017eit\u00fd (<3m)
-cz.afrosoft.whattoeat.preparationTime.quick=Rychl\u00fd (<10m)
-cz.afrosoft.whattoeat.preparationTime.short=Kr\u00e1tk\u00fd (<30m)
-cz.afrosoft.whattoeat.preparationTime.medium=St\u0159edn\u00ed (<1h)
-cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00fd (>1h)
+cz.afrosoft.whattoeat.preparationTime.instant=Okam\u017Eit\u00FD (<3m)
+cz.afrosoft.whattoeat.preparationTime.quick=Rychl\u00FD (<10m)
+cz.afrosoft.whattoeat.preparationTime.short=Kr\u00E1tk\u00FD (<30m)
+cz.afrosoft.whattoeat.preparationTime.medium=St\u0159edn\u00ED (<1h)
+cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00FD (>1h)
 
 cz.afrosoft.whattoeat.ingredientUnit.piece=ks
 cz.afrosoft.whattoeat.ingredientUnit.weight=g
@@ -133,11 +133,11 @@ cz.afrosoft.whattoeat.ingredientUnit.volume=ml
 #Dialog titles
 cz.afrosoft.whattoeat.dialog.error.title=Chyba
 cz.afrosoft.whattoeat.dialog.info.title=Informace
-cz.afrosoft.whattoeat.dialog.confirm.title=Potvrzen\u00ed
+cz.afrosoft.whattoeat.dialog.confirm.title=Potvrzen\u00ED
 #Dialog titles end
 
 #Diet list
-cz.afrosoft.whattoeat.dietlist.table.ingredientKey=Jm\u00e9no
+cz.afrosoft.whattoeat.dietlist.table.ingredientKey=Jm\u00E9no
 cz.afrosoft.whattoeat.dietlist.table.from=Od
 cz.afrosoft.whattoeat.dietlist.table.to=Do
 
@@ -145,16 +145,20 @@ cz.afrosoft.whattoeat.dietlist.action.view=Z
 
 
 cz.afrosoft.whattoeat.dietview.table.day=Den
-cz.afrosoft.whattoeat.dietview.table.breakfast=Sn\u00eddan\u011b
-cz.afrosoft.whattoeat.dietview.table.morningSnack=Dopoledn\u00ed sva\u010dina
-cz.afrosoft.whattoeat.dietview.table.afternoonSnack=Odpoledn\u00ed sva\u010dina
-cz.afrosoft.whattoeat.dietview.table.soup=Pol\u00e9vka
-cz.afrosoft.whattoeat.dietview.table.lunch=Ob\u011bd
-cz.afrosoft.whattoeat.dietview.table.sideDish=P\u0159\u00edloha
-cz.afrosoft.whattoeat.dietview.table.dinner=Ve\u010de\u0159e
+cz.afrosoft.whattoeat.dietview.table.breakfast=Sn\u00EDdan\u011B
+cz.afrosoft.whattoeat.dietview.table.morningSnack=Dopoledn\u00ED sva\u010Dina
+cz.afrosoft.whattoeat.dietview.table.afternoonSnack=Odpoledn\u00ED sva\u010Dina
+cz.afrosoft.whattoeat.dietview.table.soup=Pol\u00E9vka
+cz.afrosoft.whattoeat.dietview.table.lunch=Ob\u011Bd
+cz.afrosoft.whattoeat.dietview.table.sideDish=P\u0159\u00EDloha
+cz.afrosoft.whattoeat.dietview.table.dinner=Ve\u010De\u0159e
 
 cz.afrosoft.whattoeat.dietview.action.show=Z
+cz.afrosoft.whattoeat.dietview.action.edit=E
 cz.afrosoft.whattoeat.dietview.action.shopping=N
 
-cz.afrosoft.whattoeat.dietview.dialog.shoppping.title=N\u00e1kupn\u00ed l\u00edstek
+cz.afrosoft.whattoeat.dietview.dialog.shoppping.title=N\u00E1kupn\u00ED l\u00EDstek
+cz.afrosoft.whattoeat.dietview.dialog.meal.title=V\u00FDb\u011Br j\u00EDdla
+cz.afrosoft.whattoeat.dietview.dialog.meal.recipe=Recept:
+cz.afrosoft.whattoeat.dietview.dialog.meal.servings=Porce:
 #Diet list end
