Created support for persisting of enums.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -111,9 +111,10 @@ cz.afrosoft.whattoeat.recipeType.breakfast=Sn\u00EDdan\u011B
 cz.afrosoft.whattoeat.recipeType.snack=Sva\u010Dina
 cz.afrosoft.whattoeat.recipeType.lunch=Ob\u011Bd
 cz.afrosoft.whattoeat.recipeType.soup=Pol\u00E9vka
-cz.afrosoft.whattoeat.recipeType.dinner=Ve\u010De\u0159e
+cz.afrosoft.whattoeat.recipeType.mainDish=Hlavn\u00ED j\u00EDdlo
 cz.afrosoft.whattoeat.recipeType.sideDish=P\u0159\u00EDloha
 cz.afrosoft.whattoeat.recipeType.dessert=Dezert
+cz.afrosoft.whattoeat.recipeType.salad=Sal\u00E1t
 
 cz.afrosoft.whattoeat.taste.sweet=Sladk\u00E9
 cz.afrosoft.whattoeat.taste.salty=Slan\u00E9
@@ -123,7 +124,8 @@ cz.afrosoft.whattoeat.preparationTime.instant=Okam\u017Eit\u00FD (<3m)
 cz.afrosoft.whattoeat.preparationTime.quick=Rychl\u00FD (<10m)
 cz.afrosoft.whattoeat.preparationTime.short=Kr\u00E1tk\u00FD (<30m)
 cz.afrosoft.whattoeat.preparationTime.medium=St\u0159edn\u00ED (<1h)
-cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00FD (>1h)
+cz.afrosoft.whattoeat.preparationTime.long=Dlouh\u00FD (<2h)
+cz.afrosoft.whattoeat.preparationTime.forever=Ob\u0159\u00ED (>2h)
 
 cz.afrosoft.whattoeat.ingredientUnit.piece=ks
 cz.afrosoft.whattoeat.ingredientUnit.weight=g
