--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -7,6 +7,7 @@ cz.afrosoft.whattoeat.value.empty=
 cz.afrosoft.whattoeat.menu.recipes=Recepty
 cz.afrosoft.whattoeat.menu.ingredients=Ingredience
 cz.afrosoft.whattoeat.menu.diet.generator=Generovat
+cz.afrosoft.whattoeat.menu.error=Str\u00E1nku nelze zobrazit: {0}
 #Menu end
 
 #Recipes
