--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,9 @@
 
 ----- ARCHITECTURE -----------------------------------------------------------------------------------------------------
 - Add hash code and equals to entities
-- Set nullable false to mandatory entity attributes
+- Set nullable false to mandatory entity attributes OR use hibernate validations
+- Use config property loading from Spring instead of ConfigService
+- Use property from config to set anguage of application
 
 Done:
 X - Add UUID to every entity and migrate existing data
