Added dialog for displaying errors with exception stack trace.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -7,7 +7,7 @@ cz.afrosoft.whattoeat.value.empty=
 cz.afrosoft.whattoeat.menu.recipes=Recepty
 cz.afrosoft.whattoeat.menu.ingredients=Ingredience
 cz.afrosoft.whattoeat.menu.diet.generator=Generovat
-cz.afrosoft.whattoeat.menu.error=Str\u00E1nku nelze zobrazit: {0}
+cz.afrosoft.whattoeat.menu.error=Str\u00E1nku {0} nelze zobrazit
 #Menu end
 
 #Recipes
@@ -137,6 +137,7 @@ cz.afrosoft.whattoeat.ingredientUnit.volume=ml
 cz.afrosoft.whattoeat.dialog.error.title=Chyba
 cz.afrosoft.whattoeat.dialog.info.title=Informace
 cz.afrosoft.whattoeat.dialog.confirm.title=Potvrzen\u00ED
+cz.afrosoft.whattoeat.dialog.exception.stacktrace=Stack trace
 #Dialog titles end
 
 #Diet list
