Finished author section.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -1,14 +1,35 @@
 #Common
 cz.afrosoft.whattoeat.title=Co k \u017Er\u00E1dlu
 cz.afrosoft.whattoeat.value.empty=
+cz.afrosoft.whattoeat.core.dialog.error=Nelze vytvo\u0159it dialog
 #Common end
 
 #Menu
+cz.afrosoft.whattoeat.menu.authors=Auto\u0159i
 cz.afrosoft.whattoeat.menu.recipes=Recepty
 cz.afrosoft.whattoeat.menu.ingredients=Ingredience
+cz.afrosoft.whattoeat.menu.diet.foodlist=J\u00EDdeln\u00ED\u010Dky
 cz.afrosoft.whattoeat.menu.diet.generator=Generovat
 cz.afrosoft.whattoeat.menu.error=Str\u00E1nku {0} nelze zobrazit
 #Menu end
+#Autohr
+cz.afrosoft.whattoeat.authors.actions.title=Akce
+cz.afrosoft.whattoeat.authors.actions.view=Z
+cz.afrosoft.whattoeat.authors.actions.add=P
+cz.afrosoft.whattoeat.authors.actions.edit=E
+cz.afrosoft.whattoeat.authors.actions.delete=S
+cz.afrosoft.whattoeat.authors.table.header.name=Jm\u00E9no
+cz.afrosoft.whattoeat.authors.table.header.email=Email
+cz.afrosoft.whattoeat.authors.table.header.cookbooks=Kucha\u0159ky
+cz.afrosoft.whattoeat.authors.view.title=Zobrazen\u00ED autora
+cz.afrosoft.whattoeat.authors.add.title=Vytvo\u0159en\u00ED autora
+cz.afrosoft.whattoeat.authors.edit.title=\u00DAprava autora
+cz.afrosoft.whattoeat.authors.add.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.authors.add.email=Email:
+cz.afrosoft.whattoeat.authors.add.description=O autorovi:
+cz.afrosoft.whattoeat.authors.delete.title=Smaz\u00E1n\u00ED autora
+cz.afrosoft.whattoeat.authors.delete.confirm=Opravdu si p\u0159ejete smazat autora {0}?
+#end of Author
 
 #Recipes
 cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
@@ -137,7 +158,7 @@ cz.afrosoft.whattoeat.ingredientUnit.volume=ml
 cz.afrosoft.whattoeat.dialog.error.title=Chyba
 cz.afrosoft.whattoeat.dialog.info.title=Informace
 cz.afrosoft.whattoeat.dialog.confirm.title=Potvrzen\u00ED
-cz.afrosoft.whattoeat.dialog.exception.stacktrace=Stack trace
+cz.afrosoft.whattoeat.dialog.exception.stacktrace=Detaily (Stack trace)
 #Dialog titles end
 
 #Diet list
