New implementation of model interfaces which separates entities from front end. Service for cookbook. Basic UI for cookbook.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -6,6 +6,7 @@ cz.afrosoft.whattoeat.core.dialog.error=Nelze vytvo\u0159it dialog
 
 #Menu
 cz.afrosoft.whattoeat.menu.authors=Auto\u0159i
+cz.afrosoft.whattoeat.menu.cookbooks=Kucha\u0159ky
 cz.afrosoft.whattoeat.menu.recipes=Recepty
 cz.afrosoft.whattoeat.menu.ingredients=Ingredience
 cz.afrosoft.whattoeat.menu.diet.foodlist=J\u00EDdeln\u00ED\u010Dky
@@ -30,6 +31,20 @@ cz.afrosoft.whattoeat.authors.add.description=O autorovi:
 cz.afrosoft.whattoeat.authors.delete.title=Smaz\u00E1n\u00ED autora
 cz.afrosoft.whattoeat.authors.delete.confirm=Opravdu si p\u0159ejete smazat autora {0}?
 #end of Author
+#Cookbooks
+cz.afrosoft.whattoeat.cookbook.action.view=Z
+cz.afrosoft.whattoeat.cookbook.action.add=P
+cz.afrosoft.whattoeat.cookbook.action.edit=E
+cz.afrosoft.whattoeat.cookbook.action.delete=S
+cz.afrosoft.whattoeat.cookbook.table.header.name=Jm\u00E9no
+cz.afrosoft.whattoeat.cookbook.table.header.authors=Auto\u0159i
+cz.afrosoft.whattoeat.cookbook.view.title=Zobrazen\u00ED kucha\u0159ky
+cz.afrosoft.whattoeat.cookbook.add.title=Vytvo\u0159en\u00ED kucha\u0159ky
+cz.afrosoft.whattoeat.cookbook.edit.title=\u00DAprava kucha\u0159ky
+cz.afrosoft.whattoeat.cookbook.add.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.cookbook.add.description=Popis:
+cz.afrosoft.whattoeat.cookbook.add.authors=Auto\u0159i:
+#end of cookbooks
 
 #Recipes
 cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
