--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@
 - Use config property loading from Spring instead of ConfigService
 - Use property from config to set language of application
 - Add transactional annotations to write service methods
+- ConverterUtil can have method for converting not sorted sets. This can be used for converting before saving entities. (low priority)
 
 Done:
 X - Add UUID to every entity and migrate existing data
