Cookbook list and dialog. Created suggestion for combo boxes.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -44,6 +44,7 @@ cz.afrosoft.whattoeat.cookbook.edit.title=\u00DAprava kucha\u0159ky
 cz.afrosoft.whattoeat.cookbook.add.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.cookbook.add.description=Popis:
 cz.afrosoft.whattoeat.cookbook.add.authors=Auto\u0159i:
+cz.afrosoft.whattoeat.cookbook.add.authors.name=Jm\u00E9no:
 #end of cookbooks
 
 #Recipes
