Delete for cookbooks.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -45,6 +45,8 @@ cz.afrosoft.whattoeat.cookbook.add.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.cookbook.add.description=Popis:
 cz.afrosoft.whattoeat.cookbook.add.authors=Auto\u0159i:
 cz.afrosoft.whattoeat.cookbook.add.authors.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.cookbook.delete.title=Smaz\u00E1n\u00ED kucha\u0159ky
+cz.afrosoft.whattoeat.cookbook.delete.confirm=Opravdu si p\u0159ejete smazat kucha\u0159ku {0}?
 #end of cookbooks
 
 #Recipes
