Added edit of cookbook. Changed author view to master detail pane.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -15,14 +15,12 @@ cz.afrosoft.whattoeat.menu.error=Str\u00E1nku {0} nelze zobrazit
 #Menu end
 #Autohr
 cz.afrosoft.whattoeat.authors.actions.title=Akce
-cz.afrosoft.whattoeat.authors.actions.view=Z
 cz.afrosoft.whattoeat.authors.actions.add=P
 cz.afrosoft.whattoeat.authors.actions.edit=E
 cz.afrosoft.whattoeat.authors.actions.delete=S
 cz.afrosoft.whattoeat.authors.table.header.name=Jm\u00E9no
 cz.afrosoft.whattoeat.authors.table.header.email=Email
 cz.afrosoft.whattoeat.authors.table.header.cookbooks=Kucha\u0159ky
-cz.afrosoft.whattoeat.authors.view.title=Zobrazen\u00ED autora
 cz.afrosoft.whattoeat.authors.add.title=Vytvo\u0159en\u00ED autora
 cz.afrosoft.whattoeat.authors.edit.title=\u00DAprava autora
 cz.afrosoft.whattoeat.authors.add.name=Jm\u00E9no:
@@ -30,15 +28,14 @@ cz.afrosoft.whattoeat.authors.add.email=Email:
 cz.afrosoft.whattoeat.authors.add.description=O autorovi:
 cz.afrosoft.whattoeat.authors.delete.title=Smaz\u00E1n\u00ED autora
 cz.afrosoft.whattoeat.authors.delete.confirm=Opravdu si p\u0159ejete smazat autora {0}?
+cz.afrosoft.whattoeat.authors.detail=Popis Autora
 #end of Author
 #Cookbooks
-cz.afrosoft.whattoeat.cookbook.action.view=Z
 cz.afrosoft.whattoeat.cookbook.action.add=P
 cz.afrosoft.whattoeat.cookbook.action.edit=E
 cz.afrosoft.whattoeat.cookbook.action.delete=S
 cz.afrosoft.whattoeat.cookbook.table.header.name=Jm\u00E9no
 cz.afrosoft.whattoeat.cookbook.table.header.authors=Auto\u0159i
-cz.afrosoft.whattoeat.cookbook.view.title=Zobrazen\u00ED kucha\u0159ky
 cz.afrosoft.whattoeat.cookbook.add.title=Vytvo\u0159en\u00ED kucha\u0159ky
 cz.afrosoft.whattoeat.cookbook.edit.title=\u00DAprava kucha\u0159ky
 cz.afrosoft.whattoeat.cookbook.add.name=Jm\u00E9no:
