--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -28,7 +28,7 @@ cz.afrosoft.whattoeat.authors.add.email=Email:
 cz.afrosoft.whattoeat.authors.add.description=O autorovi:
 cz.afrosoft.whattoeat.authors.delete.title=Smaz\u00E1n\u00ED autora
 cz.afrosoft.whattoeat.authors.delete.confirm=Opravdu si p\u0159ejete smazat autora {0}?
-cz.afrosoft.whattoeat.authors.detail=Popis Autora
+cz.afrosoft.whattoeat.authors.detail=Popis autora
 #end of Author
 #Cookbooks
 cz.afrosoft.whattoeat.cookbook.action.add=P
@@ -44,6 +44,7 @@ cz.afrosoft.whattoeat.cookbook.add.authors=Auto\u0159i:
 cz.afrosoft.whattoeat.cookbook.add.authors.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.cookbook.delete.title=Smaz\u00E1n\u00ED kucha\u0159ky
 cz.afrosoft.whattoeat.cookbook.delete.confirm=Opravdu si p\u0159ejete smazat kucha\u0159ku {0}?
+cz.afrosoft.whattoeat.cookbook.detail=Popis kucha\u0159ky
 #end of cookbooks
 
 #Recipes
