Ingredient dialog part 1.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -103,12 +103,11 @@ cz.afrosoft.whattoeat.ingredients.table.header.name=Jm\u00E9no
 cz.afrosoft.whattoeat.ingredients.table.header.unit=Jednotka
 cz.afrosoft.whattoeat.ingredients.table.header.price=Cena
 cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ED\u010Dov\u00E1 slova
-
-cz.afrosoft.whattoeat.ingredients.dialog.name=Jm\u00E9no:
-cz.afrosoft.whattoeat.ingredients.dialog.unit=Jednotka:
-cz.afrosoft.whattoeat.ingredients.dialog.price=Cena za jednotku:
-cz.afrosoft.whattoeat.ingredients.dialog.conversion=Pr\u016Fm\u011Brn\u00FD po\u010Det jednotek na kus:
-cz.afrosoft.whattoeat.ingredients.dialog.keywords=Kl\u00ED\u010Dov\u00E1 slova:
+cz.afrosoft.whattoeat.ingredient.dialog.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.ingredient.dialog.unit=Jednotka:
+cz.afrosoft.whattoeat.ingredient.dialog.price=Cena za jednotku:
+cz.afrosoft.whattoeat.ingredient.dialog.conversion=Pr\u016Fm\u011Brn\u00FD po\u010Det jednotek na kus:
+cz.afrosoft.whattoeat.ingredient.dialog.keywords=Kl\u00ED\u010Dov\u00E1 slova:
 
 cz.afrosoft.whattoeat.dialog.delete.ingredient.title=Smaz\u00E1n\u00ED ingredience
 cz.afrosoft.whattoeat.dialog.delete.ingredient.messages=Opravdu chcete smazat tuto ingredienci?
