CRUD for Ingredients.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -13,6 +13,10 @@ cz.afrosoft.whattoeat.menu.diet.foodlist=J\u00EDdeln\u00ED\u010Dky
 cz.afrosoft.whattoeat.menu.diet.generator=Generovat
 cz.afrosoft.whattoeat.menu.error=Str\u00E1nku {0} nelze zobrazit
 #Menu end
+#Components
+cz.afrosoft.whattoeat.component.keywordfield.label=Kl\u00ED\u010Dov\u00E1 slova:
+#Components end
+
 #Autohr
 cz.afrosoft.whattoeat.authors.actions.title=Akce
 cz.afrosoft.whattoeat.authors.table.header.name=Jm\u00E9no
@@ -103,11 +107,17 @@ cz.afrosoft.whattoeat.ingredients.table.header.name=Jm\u00E9no
 cz.afrosoft.whattoeat.ingredients.table.header.unit=Jednotka
 cz.afrosoft.whattoeat.ingredients.table.header.price=Cena
 cz.afrosoft.whattoeat.ingredients.table.header.keywords=Kl\u00ED\u010Dov\u00E1 slova
+cz.afrosoft.whattoeat.ingredient.dialog.title.add=P\u0159id\u00E1n\u00ED ingredience
+cz.afrosoft.whattoeat.ingredient.dialog.title.edit=\u00DAprava ingredience
 cz.afrosoft.whattoeat.ingredient.dialog.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.ingredient.dialog.unit=Jednotka:
 cz.afrosoft.whattoeat.ingredient.dialog.price=Cena za jednotku:
-cz.afrosoft.whattoeat.ingredient.dialog.conversion=Pr\u016Fm\u011Brn\u00FD po\u010Det jednotek na kus:
-cz.afrosoft.whattoeat.ingredient.dialog.keywords=Kl\u00ED\u010Dov\u00E1 slova:
+cz.afrosoft.whattoeat.ingredient.dialog.conversion=Konverze jednotek
+cz.afrosoft.whattoeat.ingredient.dialog.conversion.piece=Pr\u016Fm\u011Brn\u00FD po\u010Det gram\u016F na kus:
+cz.afrosoft.whattoeat.ingredient.dialog.conversion.gram=Pr\u016Fm\u011Brn\u00FD po\u010Det mililitr\u016F na gram:
+cz.afrosoft.whattoeat.ingredient.dialog.conversion.pinch=Pr\u016Fm\u011Brn\u00FD po\u010Det gram\u016F na \u0161petku:
+cz.afrosoft.whattoeat.ingredient.dialog.conversion.cofeespoon=Pr\u016Fm\u011Brn\u00FD po\u010Det gram\u016F na k\u00E1vovou l\u017Ei\u010Dku:
+cz.afrosoft.whattoeat.ingredient.dialog.conversion.spoon=Pr\u016Fm\u011Brn\u00FD po\u010Det gram\u016F na l\u017E\u00EDci:
 
 cz.afrosoft.whattoeat.dialog.delete.ingredient.title=Smaz\u00E1n\u00ED ingredience
 cz.afrosoft.whattoeat.dialog.delete.ingredient.messages=Opravdu chcete smazat tuto ingredienci?
