--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,8 @@
 - Create some hack to internationalize buttons in javafx dialogs
 - Getting of all author names can have special query in repository to fetch names only
 - Decide if cells with complex graphics should be defined in code or in fxml
+- Create method for creating fxml loader with resource bundle in Main and use it in all places which creates FXML loader
+- replace join fetch queries with entity graph annotation
 
 Done:
 X - Add UUID to every entity and migrate existing data
