Controller and new fxml for recipe page. Preparing backend for recipes.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -49,12 +49,7 @@ cz.afrosoft.whattoeat.cookbook.detail=Popis kucha\u0159ky
 cz.afrosoft.whattoeat.recipes.filter.title=Filtrovat:
 
 cz.afrosoft.whattoeat.recipes.actions.title=Akce
-cz.afrosoft.whattoeat.recipes.actions.view=Z
-cz.afrosoft.whattoeat.recipes.actions.add=P
-cz.afrosoft.whattoeat.recipes.actions.edit=E
-cz.afrosoft.whattoeat.recipes.actions.delete=S
-
-cz.afrosoft.whattoeat.recipes.table.header.ingredientKey=Jm\u00E9no
+cz.afrosoft.whattoeat.recipes.table.header.name=Jm\u00E9no
 cz.afrosoft.whattoeat.recipes.table.header.recipeType=Typ
 cz.afrosoft.whattoeat.recipes.table.header.taste=Chu\u0165
 cz.afrosoft.whattoeat.recipes.table.header.preparationTime=\u010Cas
