First part of recipe front end.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -77,6 +77,8 @@ cz.afrosoft.whattoeat.recipes.add.sideDishes.name=Jm\u00E9no:
 
 cz.afrosoft.whattoeat.dialog.delete.recipe.title=Smaz\u00E1n\u00ED receptu
 cz.afrosoft.whattoeat.dialog.delete.recipe.messages=Opravdu chcete smazat tento recept?
+cz.afrosoft.whattoeat.recipe.add.title=Vytvo\u0159en\u00ED receptu
+cz.afrosoft.whattoeat.recipe.edit.title=\u00DAprava receptu
 
 ## Validations
 cz.afrosoft.whattoeat.recipes.error.null=Recept nem\u016F\u017Ee b\u00FDt null.
