--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -15,6 +15,7 @@ cz.afrosoft.whattoeat.menu.error=Str\u00E1nku {0} nelze zobrazit
 #Menu end
 #Components
 cz.afrosoft.whattoeat.component.keywordfield.label=Kl\u00ED\u010Dov\u00E1 slova:
+cz.afrosoft.whattoeat.component.durationfields.placeholder=\u010Das v minut\u00E1ch
 #Components end
 
 #Autohr
@@ -63,20 +64,23 @@ cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Porc\u00ED:
 cz.afrosoft.whattoeat.recipes.view.ingredients.price=Cena:
 
 cz.afrosoft.whattoeat.recipes.add.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.recipes.add.cookbooks=Kucha\u0159ky:
 cz.afrosoft.whattoeat.recipes.add.type=Typ:
 cz.afrosoft.whattoeat.recipes.add.taste=Chu\u0165:
-cz.afrosoft.whattoeat.recipes.add.time=\u010Cas:
+cz.afrosoft.whattoeat.recipes.add.time.preparation=Doba p\u0159\u00EDpravy:
+cz.afrosoft.whattoeat.recipes.add.time.cooking=Doba va\u0159en\u00ED:
+cz.afrosoft.whattoeat.recipes.add.time.total=Celkov\u00E1 doba:
 cz.afrosoft.whattoeat.recipes.add.rating=Hodnocen\u00ED:
 cz.afrosoft.whattoeat.recipes.add.keywords=Kl\u00ED\u010Dov\u00E1 slova:
 cz.afrosoft.whattoeat.recipes.add.ingredients=Ingredience
-cz.afrosoft.whattoeat.recipes.add.ingredients.name=Jm\u00E9no:
-cz.afrosoft.whattoeat.recipes.add.ingredients.quantity=Mno\u017Estv\u00ED:
+cz.afrosoft.whattoeat.recipes.add.ingredient.name=Jm\u00E9no:
+cz.afrosoft.whattoeat.recipes.add.ingredient.quantity=Mno\u017Estv\u00ED:
 cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00EDprava
 cz.afrosoft.whattoeat.recipes.add.sideDishes=P\u0159\u00EDlohy
 cz.afrosoft.whattoeat.recipes.add.sideDishes.name=Jm\u00E9no:
 
 cz.afrosoft.whattoeat.dialog.delete.recipe.title=Smaz\u00E1n\u00ED receptu
-cz.afrosoft.whattoeat.dialog.delete.recipe.messages=Opravdu chcete smazat tento recept?
+cz.afrosoft.whattoeat.dialog.delete.recipe.messages=Opravdu si p\u0159ejete smazat recept {0}?
 cz.afrosoft.whattoeat.recipe.add.title=Vytvo\u0159en\u00ED receptu
 cz.afrosoft.whattoeat.recipe.edit.title=\u00DAprava receptu
 
