--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -62,6 +62,10 @@ cz.afrosoft.whattoeat.recipes.view.preparation.title=P\u0159\u00EDprava
 cz.afrosoft.whattoeat.recipes.view.ingredients.title=Ingredience
 cz.afrosoft.whattoeat.recipes.view.ingredients.servings=Porc\u00ED:
 cz.afrosoft.whattoeat.recipes.view.ingredients.price=Cena:
+cz.afrosoft.whattoeat.recipes.add.properties=Vlastnosti
+cz.afrosoft.whattoeat.recipes.add.ingredients=Ingredience
+cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00EDprava
+cz.afrosoft.whattoeat.recipes.add.sideDishes=P\u0159\u00EDlohy
 
 cz.afrosoft.whattoeat.recipes.add.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.recipes.add.cookbooks=Kucha\u0159ky:
@@ -72,11 +76,8 @@ cz.afrosoft.whattoeat.recipes.add.time.cooking=Doba va\u0159en\u00ED:
 cz.afrosoft.whattoeat.recipes.add.time.total=Celkov\u00E1 doba:
 cz.afrosoft.whattoeat.recipes.add.rating=Hodnocen\u00ED:
 cz.afrosoft.whattoeat.recipes.add.keywords=Kl\u00ED\u010Dov\u00E1 slova:
-cz.afrosoft.whattoeat.recipes.add.ingredients=Ingredience
 cz.afrosoft.whattoeat.recipes.add.ingredient.name=Jm\u00E9no:
 cz.afrosoft.whattoeat.recipes.add.ingredient.quantity=Mno\u017Estv\u00ED:
-cz.afrosoft.whattoeat.recipes.add.preparation=P\u0159\u00EDprava
-cz.afrosoft.whattoeat.recipes.add.sideDishes=P\u0159\u00EDlohy
 cz.afrosoft.whattoeat.recipes.add.sideDishes.name=Jm\u00E9no:
 
 cz.afrosoft.whattoeat.dialog.delete.recipe.title=Smaz\u00E1n\u00ED receptu
