Added next and previous button to recipe dialog. Created translation mechanism for custom dialog buttons.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -2,6 +2,15 @@
 cz.afrosoft.whattoeat.title=Co k \u017Er\u00E1dlu
 cz.afrosoft.whattoeat.value.empty=
 cz.afrosoft.whattoeat.core.dialog.error=Nelze vytvo\u0159it dialog
+cz.afrosoft.whattoeat.core.dialog.button.apply=Pou\u017E\u00EDt
+cz.afrosoft.whattoeat.core.dialog.button.ok=OK
+cz.afrosoft.whattoeat.core.dialog.button.cancel=Zru\u0161it
+cz.afrosoft.whattoeat.core.dialog.button.close=Zav\u0159\u00EDt
+cz.afrosoft.whattoeat.core.dialog.button.yes=Ano
+cz.afrosoft.whattoeat.core.dialog.button.no=Ne
+cz.afrosoft.whattoeat.core.dialog.button.finish=Dokon\u010Dit
+cz.afrosoft.whattoeat.core.dialog.button.next=Dal\u0161\u00ED
+cz.afrosoft.whattoeat.core.dialog.button.previous=P\u0159edchoz\u00ED
 #Common end
 
 #Menu
