First version of recipe view dialog.

--- a/src/main/resources/text/messages_cz.properties
+++ b/src/main/resources/text/messages_cz.properties
@@ -11,6 +11,7 @@ cz.afrosoft.whattoeat.core.dialog.button.no=Ne
 cz.afrosoft.whattoeat.core.dialog.button.finish=Dokon\u010Dit
 cz.afrosoft.whattoeat.core.dialog.button.next=Dal\u0161\u00ED
 cz.afrosoft.whattoeat.core.dialog.button.previous=P\u0159edchoz\u00ED
+cz.afrosoft.whattoeat.common.quantity=Mno\u017Estv\u00ED
 #Common end
 
 #Menu
